Add builder param and new function checker

--- a/samples/src/main/res/layout/activity_main.xml
+++ b/samples/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
     tools:context="com.framgia.example.emulatordetector.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:text="Hello World!" />
 </RelativeLayout>
